...
    <string name="dudaPublicada">Duda publicada</string>
    <string name="camposRellenados">Error: Campos incorrectos</string>
    <string name="login_email">Correo electrónico</string>
    <string name="contentDescription_logo">HelpMe es una aplicación para resolución de dudas y realizar tutorías entre alumnos</string>
    <string name="hint_psasword_login">Contraseña</string>
    <string name="hint_contraseña_login">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="crear_cuenta_login">Crear una cuenta</string>
    <string name="login_titulo">Inicio sesión</string>
    <string name="button_create_account">Crear una cuenta</string>
    <string name="create_account_login">¿Ya tienes una cuenta?</string>
    <string name="hint_uo">UOXXXXXX</string>
    <string name="hint_nombre_completo">Nombre Completo</string>
...
    <string name="asignaturas_sheet_explicacion_eliminacion">Pulsa sobre el botón para eliminar las asignaturas</string>
    <string name="verificar_correo">Verificar correo electrónico</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="email_verificado">Correo electrónico verificado</string>
    <string name="icono_verificacion_contentDescripcion">El email ha sido verificado</string>
    <string name="enviar_mensaje">Enviar el mensaje</string>
    <string name="hint_mensaje_chat">Mensaje</string>
    <string name="mensaje_contenido_prueba">Hola, qué tal ?</string>
    <string name="hora_envio_mensaje_default">Hace 2 segundos</string>
    <string name="add_chat">Iniciar una nueva conversación</string>

    <string name="chats">Chats</string>
...
